tests/sksl/errors/Ossfuzz32851.glsl
### Compilation failed:

error: 1: division by zero
int v=6/int2(bool2(0));
      ^^^^^^^^^^^^^^^^
error: 1: expected 'int', but found 'int2'
int v=6/int2(bool2(0));
      ^^^^^^^^^^^^^^^^
2 errors
